# ydays

Enzo_bau/virus/: chrome.go  go.mod
Enzo_bau/virus V2/: main.old  test.go
Enzo_bau/virus V2/virus/app/: go.mod  main.go
Enzo_bau/virus V2/virus/app/utils/: chrome.go  decryptFile.go  globaleVar.go  masterKey.go  post.go  rsa.go
Enzo_bau/virus V2/web/server/: go.mod  go.sum  main.go  private.pem
Enzo_bau/virus V2/web/server/assets/: web.go
Enzo_bau/virus/app/: decryptFile.go  main.go
N_Germond/keylogger/src/: main.rs
Nathan NAKOU LOUZONZILA/lowder/: Cargo.toml
Nathan NAKOU LOUZONZILA/lowder/src/: main.rs
Nathan NAKOU LOUZONZILA/socket_train/: Cargo.toml
Nathan NAKOU LOUZONZILA/socket_train/src/: check_up.rs  main.rs
keylogger/: Cargo.toml  assets.txt  build_and_deploy.sh
