[package]
name = "socket_train"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true     # Supprime le symbole de debug
lto = true       # Link time optimisation
panic = "abort"  # Empêche Rust d'inclure un unwinder pour les erreurs

[dependencies]
windows = { version = "0.58.0", features = ["Win32_Networking_WinSock","Win32_Security","Win32_System_Threading"] }
libc = { version = "0.2.169", default-features = false }